src/mds/Locker.cc
@@ -2981,7 +2981,8 @@ void Locker::handle_client_caps(const cref_t<MClientCaps> &m)
 
       // client flushes and releases caps at the same time. make sure MDCache::cow_inode()
       // properly setup CInode::client_need_snapflush
-      if ((dirty & ~cap->issued()) && !need_snapflush)
+      if (!need_snapflush && (dirty & ~cap->issued()) &&
+	  (m->flags & MClientCaps::FLAG_PENDING_CAPSNAP))
 	cap->mark_needsnapflush();
     }
 
